tests/errors/type_mismatch_addition.dang
# Test type mismatch in addition
pub result = "hello" + 42